<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:fitsSystemWindows="true"
    >

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/connect"
        android:textSize="20sp"
        android:textColor="#000"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

    <ImageView
        android:id="@+id/img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_below="@+id/img"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:background="@drawable/bg_shape">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center">

            <TextView
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:paddingLeft="5dp"
                android:text="@string/account"
                android:textColor="#000000"/>

            <gos.wxy.adapter.EditTextWithDel
                android:id="@+id/edit_account"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/account_hint"
                android:textSize="17sp"
                android:paddingLeft="5dp"
                android:textColorHint="#b3b0b0"
                android:singleLine="true"
                android:drawableRight="@drawable/edit_delete"
                android:background="@drawable/edit_selector"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:paddingLeft="5dp"
                android:text="@string/password"
                android:textColor="#000000"/>

            <gos.wxy.adapter.EditTextWithDel
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/psw_hint"
                android:paddingLeft="5dp"
                android:textColorHint="#b3b0b0"
                android:textSize="17sp"
                android:singleLine="true"
                android:drawableRight="@drawable/edit_delete"
                android:inputType="textPassword"
                android:background="@drawable/edit_selector"/>

        </LinearLayout>

        <TextView
            android:id="@+id/psw_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_gravity="end"
            android:text="@string/psw_forget"
            android:textSize="12sp"
            android:textColor="#363535"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkPsw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkPsw"
                android:checked="false"
                android:textColor="#000000" />

            <CheckBox
                android:id="@+id/checkAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/checkAccount"
                android:textColor="#000000"/>
        </LinearLayout>

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/login"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:background="@drawable/text_selector"/>

    </LinearLayout>

    </RelativeLayout>

</RelativeLayout>